# lilypad

./: .gitignore  Cargo.toml  README.md  index.html  package-lock.json  package.json
crates/lilypad-core/: Cargo.toml
crates/lilypad-core/src/: api.rs  config.rs  duration.rs  lib.rs  library_match.rs  local_games.rs  monitor.rs  steam.rs
crates/lilypad-gtk/: Cargo.toml
crates/lilypad-gtk/data/: uk.co.froglog.lilypad.desktop
crates/lilypad-gtk/debian/: postinst  postrm
crates/lilypad-gtk/src/: app.rs  autostart.rs  main.rs  mappings_model.rs  monitor_glue.rs  notify.rs  persistence.rs  resolve.rs  session_flow.rs  state.rs  tray.rs
crates/lilypad-gtk/src/views/: excluded_games.rs  login.rs  main_view.rs  mappings.rs  mod.rs  new_games.rs  pending.rs  session.rs  watched_dirs.rs
scripts/: copy-frontend.js  release-linux-gtk.sh  release.ps1  release.sh
src/: main.css  main.js
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: api.rs  config.rs  lib.rs  main.rs  monitor.rs
