[package]
name = "lilypad"
version = "0.4.4"
description = "Froglog game time tracker - system tray app"
edition = "2021"
rust-version = "1.70"

[lib]
name = "lilypad_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }
ico = "0.5"

[dependencies]
tauri = { version = "2", features = ["tray-icon", "protocol-asset", "image-ico"] }
tauri-plugin-autostart = "2"
tauri-plugin-notification = "2"
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sysinfo = "0.31"
wmi = "0.14"
reqwest = { version = "0.12", features = ["json", "blocking"] }
tokio = { version = "1", features = ["full"] }
dirs = "5"
chrono = "0.4"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
] }
